--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 CORS_ALLOWED_ORIGINS=http://localhost:5173,
+
+DB_HOST=127.0.0.1
+DB_USER=test
+DB_PASSWORD=supersecret
+DB_NAME=pokeapi-app-db
+DB_PORT=5432
